PYIC-8593: Add transitions time window inputs.

--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -41,6 +41,18 @@
               <legend>Turn off a CRI</legend>
               <p>See what happens when you turn off a service.</p>
             </fieldset>
+            <fieldset id="journeyTransitionsInput">
+              <legend>Customise api</legend>
+              <p>Customise api calls</p>
+              <span>From</span>
+              <label>
+                <input id="transitionsFromInput" type="datetime-local"/>
+              </label>
+              <span>To</span>
+              <label>
+                <input id="transitionsToInput" type="datetime-local"/>
+              </label>
+            </fieldset>
             <fieldset id="featureFlagInput">
               <legend>Turn on a feature flag</legend>
             </fieldset>
