PYIC-8593: Modify transitions enpoint to accept time window

--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -35,27 +35,28 @@
       </div>
       <div id="header-content">
         <form id="transitions-form">
-            <h2>Transitions Api</h2>
-            <fieldset id="journeyTransitionsInput">
-              <legend>Customise api</legend>
-              <p>Customise api calls</p>
-              <span>From</span>
-              <label>
-                <input id="transitionsFromInput" type="datetime-local"/>
-              </label>
-              <span>To</span>
-              <label>
-                <input id="transitionsToInput" type="datetime-local"/>
-              </label>
-                <span>Journey Id</span>
-                <label>
-                    <input placeholder="Leave blank to fetch all journeys" type="text"/>
-                </label>
-            </fieldset>
+
         </form>
         <form id="configuration-form">
           <h2>Options</h2>
           <div id="checkbox-controls">
+            <fieldset id="journeyTransitionsInput">
+            <h2>Transitions Api</h2>
+              <legend>Customise api</legend>
+              <p>Customise api calls</p>
+              <span>From</span>
+              <label>
+                <input id="transitionsFromInput" type="datetime-local" name="fromDate"/>
+              </label>
+              <span>To</span>
+              <label>
+                <input id="transitionsToInput" type="datetime-local" name="toDate"/>
+              </label>
+              <span>Journey Id</span>
+              <label>
+                <input placeholder="Leave blank to fetch all journeys" type="text"/>
+              </label>
+            </fieldset>
             <fieldset id="disabledInput">
               <legend>Turn off a CRI</legend>
               <p>See what happens when you turn off a service.</p>
