Add note to say not all CRIs have disabled routing configured

--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -39,7 +39,7 @@
           <div id="checkbox-controls">
             <fieldset id="disabledInput">
               <legend>Turn off a CRI</legend>
-              <p>See what happens when you turn off a service.</p>
+              <p>Note not all CRIs have disabled routing configured.</p>
             </fieldset>
             <fieldset id="featureFlagInput">
               <legend>Turn on a feature flag</legend>
