--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -44,6 +44,10 @@
             <h2>Transitions Api</h2>
               <legend>Customise api</legend>
               <p>Customise api calls</p>
+              <label>
+                <input value="enableTraffic" type="checkbox" name="isEnabled">
+                <span>Enable transitions traffic</span>
+              </label>
               <span>From</span>
               <label>
                 <input id="transitionsFromInput" type="datetime-local" name="fromDate"/>
