PYIC-8593: Add input parsing in lambda for journey/session id

--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -56,7 +56,7 @@
               <label for="sessionJourneySelection">Fetch by</label>
               <select id="sessionJourneySelection" name="sessionJourneySelection">
                 <option value="journey">Journey Id</option>
-                <option value="session">Session Id</option>
+                <option value="session">IPV Session Id</option>
               </select>
               <label>
                 <input placeholder="Leave blank to fetch all journeys" type="text" name="journeySession"/>
