PYIC-8593: Add highlight feature for selected journey.

--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -68,7 +68,7 @@
                 <option value="session">IPV Session Id</option>
               </select>
               <label>
-                <input placeholder="Leave blank to fetch all journeys" type="text" name="journeySession"/>
+                <input placeholder="Leave blank to fetch all journeys" type="text" id="journeySessionIdInput" name="journeySession"/>
               </label>
               <button id="form-button">Search</button>
             </fieldset>
