--- a/journey-map/public/index.html
+++ b/journey-map/public/index.html
@@ -35,9 +35,9 @@
       </div>
       <div id="header-content">
         <form id="transitions-traffic-form">
-            <h2>Transitions Traffic</h2>
+            <h2>User Traffic</h2>
             <fieldset id="journeyTransitionsInput">
-              <legend>Customise api</legend>
+              <legend>Define traffic</legend>
               <p>Customise transitions request to see traffic between states</p>
               <h4>Target Environment</h4>
               <label for="targetEnvironment"></label>
